I1BCIP-155: Fixed z-index of open Sidebar btn

--- a/src/components/sidebar/styles.css
+++ b/src/components/sidebar/styles.css
@@ -47,6 +47,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    z-index: 9999;
 }
 
 .sidebar-nav-top{
